force-app/main/default/objects/Resource__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related User, if applicable</inlineHelpText>
    <label>Resource (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>