force-app/main/default/objects/Resource__c/fields/Resource_Contact__c.field-meta.xml
<CustomField>
    <fullName>Resource_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Contact, if applicable</inlineHelpText>
    <label>Resource (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Records</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>